tests/baselines/reference/propertyOverridesAccessors4(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
propertyOverridesAccessors4.ts(6,5): error TS2610: 'sound' is defined as an accessor in class 'Animal', but is overridden here in 'Lion' as an instance property.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== propertyOverridesAccessors4.ts (1 errors) ====
    declare class Animal {
        get sound(): string
        set sound(val: string)
    }
    class Lion extends Animal {
        sound = 'RAWR!' // error here
        ~~~~~
!!! error TS2610: 'sound' is defined as an accessor in class 'Animal', but is overridden here in 'Lion' as an instance property.
    }
    